--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,9 @@
             <div class="dos">
                 <h2><a href="/html/carlos.html">Cronograma</a></h2>
             </div>
+            <div class="tres">
+                <h2><a href="/html/1.html">Modificar Notas</a></h2>
+            </div>
         </div>
         <div class="main"> 
             <div class="barra-pequeña"> 
